<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>de.upb.sse</groupId>
	<artifactId>cutNRun</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>cutNRun</name>
	<description>Project for statically finding a method, determine it's possible parameter values and run</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<sootUp.version>1.3.0</sootUp.version>
		<version.shrinkwrap.resolvers>3.3.1</version.shrinkwrap.resolvers>
	</properties>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.core</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.cast</artifactId>
			<version>1.6.4</version>
		</dependency>
		<!--<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.core</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.core</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.sourcecode</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.bytecode</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.jimple.parser</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.callgraph</artifactId>
			<version>${sootUp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.analysis</artifactId>
			<version>${sootUp.version}</version>
		</dependency>-->
		<dependency>
			<groupId>com.github.soot-oss</groupId>
			<artifactId>SootUp</artifactId>
			<version>develop-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<version>${version.shrinkwrap.resolvers}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-api-maven</artifactId>
			<version>${version.shrinkwrap.resolvers}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.2</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
